--- a/content/modules/ROOT/pages/chapter01.adoc
+++ b/content/modules/ROOT/pages/chapter01.adoc
@@ -11,8 +11,8 @@
 * "It looks like this handy glossary is going to be a useful companion through my journey," you think to yourself.
 * With these resources at your fingertips, you're now ready to start working on your new project.
 
-IMPORTANT: On the right of your screen you will notice two terminals.  The top terminal should be your *development environment* and the bottom terminal is your *QA environment*.  Both terminals should be logged into the *QA environment* on start up.  In your *development environment* (terminal at the top), run the below command to login to the development environment.  Use {developer_cluster_bastion_ssh_password} as your password:
-[source, role="execute"]
+IMPORTANT: On the right of your screen you will notice two terminals.  The top terminal should be your *development environment* and the bottom terminal is your *QA environment*.  Both terminals should be logged into the *QA environment* on start up.  In your *development environment* (terminal at the top), run the below command to login to the development environment.  Use *{developer_cluster_bastion_ssh_password}* as your password:
+[source, role="execute", subs="attributes"]
 ----
 ssh {developer_cluster_bastion_ssh_user_name}@{developer_cluster_bastion_public_hostname}
 ----
